# ciencia-de-dados-streamlit

./: README.md  notas.txt  pyproject.toml
ciencia_de_dados/: app.py  base-de-dados-2.py  base-de-dados.py
